# PourUPScript

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  interp.cpp  package-lock.json  package.json  pups.cpp  pups.h  pups_simple.hpp  test.cpp
cpp_lib/: cpp_lib.h  math.hpp  util.hpp
deprecated/modules/: modules.h
deprecated/modules/std/: CMakeLists.txt  ios.cpp  ios.h  memory.h  pupsmath.cpp  pupsmath.h  random.cpp  std.cpp  std.h  string_code.cpp  sutil.cpp  sutil.h  sys.cpp  sys.h
deprecated/modules/std/doc/: convert.txt  ios.txt  math.txt  memory.txt  random.txt  sutil.txt  sys.txt  tpjudge.txt
deprecated/scripts/: intro.puppy  std_bits.puppy
deprecated/scripts/std/: condition.puppy  convert.puppy  debug.puppy  literals.puppy  math.puppy  memory.puppy  reference.puppy  std.puppy  sutil.puppy  syntax.puppy
include/: convert.puppy  memory.puppy  random.puppy  scode.puppy  sys.puppy  tpjudge.puppy
learn/: 1. Statements, Expressions.puppy  10. Advanced Conditional.puppy  12. Advanced Classes.puppy  14. Macros.puppy  15. Macro Rules.puppy  2. Code Blocks.puppy  3. Conditional Blocks.puppy  4. Functions.puppy  6. References.puppy  7. Modules.puppy  8. For Loops.puppy  9. Types and Classes.puppy
learn/Puppyscript/: 1. Statements, Expressions.puppy  10. Advanced Conditional.puppy  11. Advanced Functions.puppy  13. Syntactic Sugar.puppy  14. Macros.puppy  16. Structural Expressions.puppy  3. Conditional Blocks.puppy  5. Containers.puppy  6. References.puppy  7. Modules.puppy  8. For Loops.puppy
learn/Puppyscript/challenges/: 1. Heart of Boolean.puppy  2. Iteration is All.puppy
learn/The Library/: How to write an extension.md
learn/challenges/: 1. Heart of Boolean.puppy  2. Iteration is All.puppy
modules/: modules.h
modules/std/: convert.cpp  convert.h  ios.cpp  ios.h  memory.cpp  pupsmath.cpp  pupsmath.h  random.cpp  random.h  std.cpp  std.h  string_code.cpp  string_code.h  sutil.cpp  sutil.h  sys.cpp  type_judge.cpp  type_judge.h
modules/std/doc/: convert.txt  scode.txt  sutil.txt  sys.txt
puppyscript/: main.py  rules.txt
puppyscript/cpp-puppy/: .gitignore  CMakeLists.txt  assignment.cpp  brackets.cpp  const.h  export.h  expr_optim.cpp  extract.cpp  macro_rules.cpp  main.cpp  mid_process.cpp  preprocess.cpp  processor.cpp  processor.h  shortcuts.cpp  structure.cpp  syntactic.cpp  type_format.cpp
puppyscript/puppy/: __init__.py  assignment.py  brackets.py  expr_optim.py  extract.py  formatting.py  ids.py  macro_rules.py  mid_process.py  operators.py  preprocess.py  structure.py  syntactic.py  tmp.py  type_format.py
puppyscript/puppyscript-highlights/: CHANGELOG.md  README.md  package.json  puppyscript-highlights-0.0.1.vsix
puppyscript/puppyscript-highlights/syntaxes/: puppyscript.tmLanguage.json
puppyscript/test/: main.con  main.extract  main.no_assign  main.no_brc  main.no_op  main.prep  main.puppy  main.pups  main.struct
pups/: function.hpp  keywords.hpp  macros.h  manage.hpp  object.hpp  report.hpp  scope.hpp  stdtype.hpp  token.hpp
scripts/: std_bits.puppy  std_syntax.puppy
scripts/std/: condition.puppy  convert.puppy  ios.puppy  math.puppy  memory.puppy  random.puppy  scode.puppy  std.puppy  sutil.puppy  sys.puppy  tpjudge.puppy  type_wrap.puppy
source/: const.h  constants.cpp  constants.h  control.cpp  control.h  error.cpp  error.h  map.cpp  map.h  object.cpp  object.h  syntax.cpp  syntax.h
source/builtins/: builtin_func.cpp  builtin_func.h  builtins.cpp  builtins.h  function.cpp  function.h  inline_func.cpp  inline_func.h  keyword_func.cpp  keyword_func.h  map_open.cpp  map_open.h  numbers.cpp  numbers.h  qualifiers.cpp  qualifiers.h  reference.cpp  reference.h  strings.cpp  strings.h
source/builtins/containers/: container_array.cpp  container_array.h  container_base.cpp  container_base.h  container_deque.cpp  container_deque.h  container_hashmap.cpp  container_hashmap.h  container_pair.cpp  container_pair.h  containers.cpp  containers.h
source/builtins/debugger/: debug_info.cpp  debug_info.h
source/builtins/keywords/: builtin_func.cpp  builtin_func.h  compare.cpp  compare.h  inline_func.cpp  inline_func.h  inline_typing.cpp  inline_typing.h  keyword_func.cpp  keyword_func.h  map_open.cpp  map_open.h  qualifiers.h
source/builtins/ranges/: ranges.cpp  ranges.h
source/builtins/structural/: enumerate.cpp  enumerate.h  match_case.cpp  match_case.h
source/builtins/types/: numbers.h  reference.cpp  reference.h  strings.cpp  strings.h  typing.cpp  typing.h
source/debug/: record.h
source/package/: package.cpp  package.h
source/utility/: const.h  iterable.cpp  iterable.h  objects.cpp  objects.h  utility.h
std/: const  const.pups  deprecated  dynamic  math  random  std  util  version_info
std/head/: const.pups  deprecated.pups  dynamic.pups  math.pups  random.pups  util.pups  version_info.pups
std_lib/: include.hpp  lib_const.hpp  lib_container.hpp  lib_dynamic.hpp  lib_math.hpp  lib_random.hpp  lib_util.hpp  lib_version_info.hpp
test/: compile.py  main.con  main.ez  main.pups  mod.con  module.con  module.pups  mylib.pups  test.con  test.puppy  test.pups  test.pups._tmpa  test.pups.a.tmp  test.pups.b.tmp  test.pups.c.tmp  test.pups.d.tmp  test.pups.e.tmp  test.pups.ecjb.tmp  test.pups.f.tmp  test.pups.ojch.tmp
vscode_extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  pourupscript-0.0.1.vsix  pourupscript-0.1.0.vsix  pourupscript-0.2.0.vsix  pourupscript-0.3.0.vsix  pourupscript-0.3.1.vsix  pourupscript-0.4.0.vsix
vscode_extension/syntaxes/: pups.tmLanguage.json
